# drf-cci-rebalancer

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: lint.yml
config/: settings.py  urls.py
cryptocurrencies/: admin.py  apps.py  models.py  services.py  tasks.py  tests.py  validators.py
cryptocurrencies/management/commands/: fetch_cc_prices.py  fetch_cc_top.py  update_cc_prices.py  update_cc_top.py  update_constituents.py
cryptocurrencies/migrations/: 0001_initial.py  0002_alter_constituent_date.py  0003_cryptocurrency_cmc_id_cryptocurrency_cmc_rank_and_more.py  0004_ccprice.py  0005_alter_ccprice_last_updated.py  0006_alter_ccprice_options.py
users/: admin.py  forms.py  managers.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_username_alter_user_email.py  0003_alter_user_managers.py
